--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -10,7 +10,7 @@ on:
 
 # Definicja zmiennych środowiskowych używanych w całym workflow
 env:
-  AZURE_WEBAPP_NAME: Bartek-ECommerceApi  # <-- WAŻNE: Wpisz tutaj unikalną nazwę swojej aplikacji z Azure!
+  AZURE_WEBAPP_NAME: bartek-ecommerceapi-d0h5dcgfdzephvgt   # <-- WAŻNE: Wpisz tutaj unikalną nazwę swojej aplikacji z Azure!
   DOTNET_VERSION: '8.0.x'
   PROJECT_PATH: 'ECommerceAPI/ECommerceAPI.csproj'
 
@@ -42,7 +42,7 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v3
       with:
-        app-name: ${{ env.Bartek-ECommerceApi }}
+        app-name: ${{ env.bartek-ecommerceapi-d0h5dcgfdzephvgt }}
         # Używamy sekretu, który skonfigurowaliśmy wcześniej w GitHub
         publish-profile: ${{ secrets.BARTEK_MALINA_SECRET }}
         # Ścieżka do paczki, którą stworzyliśmy w kroku "Publish"
