--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -42,8 +42,8 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v3
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        app-name: ${{ env.bartek-ecommerceapi-d0h5dcgfdzephvgt }}
         # Używamy sekretu, który skonfigurowaliśmy wcześniej w GitHub
-        publish-profile: ${{ secrets.BARTEK_MALINA_SECRET }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         # Ścieżka do paczki, którą stworzyliśmy w kroku "Publish"
         package: './publish'
