--- a/Ecommerce_frontend/package.json
+++ b/Ecommerce_frontend/package.json
@@ -17,5 +17,8 @@
     "@vitejs/plugin-vue": "^6.0.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
